Bug 455389 - SVG foreignObjects don't get NS_FRAME_MAY_BE_TRANSFORMED frame bit; r+sr=roc